<resources>
    <string name="app_name">OpenGym</string>
    <string name="usr">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="rutinas">Tus rutinas</string>
    <string name="rutina1">Rutina 1</string>
    <string name="acceder">Acceder</string>
    <string name="nuevarutina">Añadir rutina</string>
    <string name="añadir_fuerza">Añadir Ejercicio de Fuerza</string>
    <string name="añadir_duracion">Añadir Ejercicio de Duración</string>
    <string name="nombre">Nombre</string>
    <string name="series">Series</string>
    <string name="reps">Reps</string>
    <string name="peso">Peso</string>
    <string name="duracion">Duración</string>
    <string name="add_sesion">Añadir Sesión</string>
    <string name="sign_out">Cerrar Sesión</string>
    <string name="i">i</string>
    <string name="cerrar_rutina">Cerrar Rutina</string>
    <string name="guardar">Guardar</string>
    <string name="anterior">Anterior</string>
    <string name="x">X</string>
    <string name="image_of_a_pencil">Image of a pencil</string>
    <string name="download_button">Download button</string>
    <string name="importar_una_rutina">Importar una rutina</string>
    <string name="github">GitHub</string>
    <string name="guardar_sesion">Guardar Sesión</string>
</resources>