<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/purple"
    android:padding="8dp">

    <!-- Nombre -->
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/nombre" />

    <!-- Series -->
    <TextView
        android:id="@+id/tv_series"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/series" />

    <!-- Reps -->
    <TextView
        android:id="@+id/tv_reps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/reps" />

    <!-- Peso -->
    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/peso" />
</LinearLayout>
