<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/enter_usr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/usr"
        android:gravity="center_horizontal"
        android:layout_marginStart="60dp"
        android:padding="18dp"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/enter_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:layout_below="@id/enter_usr"
        android:gravity="center_horizontal"
        android:layout_marginStart="60dp"
        android:padding="18dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/supabutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_pass"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:backgroundTint="@color/purple"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirmar"
        android:textColor="@color/white"/>


</RelativeLayout>