<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/purple"
    android:padding="0dp">

    <!-- Primera fila -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Nombre -->
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="4dp"
            android:textColor="@android:color/white"
            android:text="@string/nombre" />

        <!-- Línea vertical -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <!-- Series -->
        <TextView
            android:id="@+id/tv_series"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="4dp"
            android:textColor="@android:color/white"
            android:text="@string/series" />

        <!-- Línea vertical -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <!-- Reps -->
        <TextView
            android:id="@+id/tv_reps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="4dp"
            android:textColor="@android:color/white"
            android:text="@string/reps" />

        <!-- Línea vertical -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <!-- Peso -->
        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="4dp"
            android:textColor="@android:color/white"
            android:text="@string/peso" />
    </LinearLayout>

    <!-- Línea en blanco -->
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/colorOnBackground"/>

    <!-- Segunda fila -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Nombre -->
        <TextView
            android:id="@+id/tv_name_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="4dp"
            android:textColor="@android:color/white"
            android:text="@string/nombre" />

        <!-- Línea vertical -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000" />
        <!-- Duración -->
        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="4dp"
            android:textColor="@android:color/white"
            android:text="@string/duracion" />
    </LinearLayout>
</LinearLayout>