<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    cardview:cardCornerRadius="12dp"
    cardview:cardElevation="4dp">

    <!-- Usamos un FrameLayout para superponer elementos -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Texto principal -->
        <TextView
            android:id="@+id/routine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:gravity="center"
            android:background="@color/boton" />

        <!-- Botón circular -->
        <TextView
            android:id="@+id/info_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="top|end"
            android:layout_margin="8dp"
            android:background="@drawable/circle_background"
            android:gravity="center"
            android:text="@string/i"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:elevation="4dp" />


        <TextView 
            android:id="@+id/delete_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="8dp"
            android:background="@drawable/circle_background"
            android:gravity="center"
            android:text="@string/x"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:elevation="4dp" />

        <ImageView
            android:id="@+id/edit_button"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/image_of_a_pencil"
            android:background="@drawable/circle_background"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="end|center"
            android:layout_margin="8dp"
            />

        <ImageView
            android:id="@+id/export_button"
            android:src="@drawable/down"
            android:contentDescription="Download button"
            android:background="@drawable/circle_background"
            android:layout_width="36dp"
            android:layout_height="40dp"
            android:layout_gravity="bottom|start"
            android:layout_margin="8dp"
            />

    </FrameLayout>
</androidx.cardview.widget.CardView>
